--- a/astrogrid/community/build.xml
+++ b/astrogrid/community/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/Attic/build.xml,v $</cvs:source>
     | <cvs:author>$Author: dave $</cvs:author>
-    | <cvs:date>$Date: 2003/09/08 21:01:28 $</cvs:date>
-    | <cvs:version>$Revision: 1.15 $</cvs:version>
+    | <cvs:date>$Date: 2003/09/09 10:02:17 $</cvs:date>
+    | <cvs:version>$Revision: 1.16 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.16  2003/09/09 10:02:17  dave
+    |   Fixed problems introduced by conflicts.
+    |
     |   Revision 1.15  2003/09/08 21:01:28  dave
     |   Added PATCH to build.xml to include classes in Castor mapping - still broke though
     |
@@ -1379,7 +1382,7 @@
 					| Required because the Castor mapping referes to  org.astrogrid.community.authentication.data.SecurityToken.
 					| May cause problems if we want to deploy these in separate jars :-(
 					+-->
-				<include name="org/astrogrid/community/authentication/data/*.java"/>
+				<include name="org/astrogrid/community/auth/data/*.java"/>
 
 			</fileset>
 		</copy>
@@ -1457,7 +1460,7 @@
 				| Required because the Castor mapping referes to  org.astrogrid.community.authentication.data.SecurityToken.
 				| May cause problems if we want to deploy these in separate jars :-(
 				+-->
-			<include name="org/astrogrid/community/authentication/data/**"/>
+			<include name="org/astrogrid/community/auth/data/**"/>
 
 			<classpath>
 				<!-- Include the JUnit libraries -->
@@ -1513,7 +1516,7 @@
 					| Required because the Castor mapping referes to  org.astrogrid.community.authentication.data.SecurityToken.
 					| May cause problems if we want to deploy these in separate jars :-(
 					+-->
-				<include name="org/astrogrid/community/authentication/data/**"/>
+				<include name="org/astrogrid/community/auth/data/**"/>
 			</fileset>
 		</jar>
 	</target>
