--- a/astrogrid/community/build.xml
+++ b/astrogrid/community/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/Attic/build.xml,v $</cvs:source>
     | <cvs:author>$Author: dave $</cvs:author>
-    | <cvs:date>$Date: 2003/09/10 02:56:03 $</cvs:date>
-    | <cvs:version>$Revision: 1.23 $</cvs:version>
+    | <cvs:date>$Date: 2003/09/10 06:03:27 $</cvs:date>
+    | <cvs:version>$Revision: 1.24 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.24  2003/09/10 06:03:27  dave
+    |   Added remote capability to Accounts
+    |
     |   Revision 1.23  2003/09/10 02:56:03  dave
     |   Added PermissionManager and tests
     |
@@ -1872,6 +1875,31 @@
 		</junit>
 	</target>
 
+
+	<!--+
+		| Run our remote client tests.
+		+-->
+	<target name="policy.remote.junit" depends="">
+		<!-- Create our reports directory -->
+		<mkdir dir="${policy.base}/junit"/>
+		<!-- Run our JUnitTestCase tests -->
+		<junit printsummary="yes" haltonfailure="true" haltonerror="true" showoutput="true" fork="true">
+			<classpath>
+				<!-- The Policy classes -->
+				<path refid="policy.client.classpath"/>
+			</classpath>
+			<!-- Generate an XML log file -->
+			<formatter type="xml"/>
+			<!-- Run the target JUnitTestCase tests -->
+			<batchtest todir="${policy.base}/junit">
+				<fileset dir="${policy.client.base}/classes">
+					<include name="org/astrogrid/community/policy/client/junit/**/JUnitRemoteAccount*.class"/>
+				</fileset>
+			</batchtest>
+		</junit>
+	</target>
+
+
 	<!--+
 	    | Test our policy service.
 	    +-->
@@ -1882,6 +1910,18 @@
 		<antcall target="policy.server.junit"/>
 		<!-- Run our client side tests -->
 		<antcall target="policy.client.junit"/>
+		<!-- Display our database -->
+		<antcall target="hsqldb.database.select"/>
+	</target>
+
+	<!--+
+	    | Test our policy service.
+	    +-->
+	<target name="policy.REMOTE-TEST" depends="">
+		<!-- Reset our database -->
+		<antcall target="hsqldb.database.delete"/>
+		<!-- Run our remote tests -->
+		<antcall target="policy.remote.junit"/>
 		<!-- Display our database -->
 		<antcall target="hsqldb.database.select"/>
 	</target>
