done a load of work on automating axis deployment, generation of wsdl & classes, castor generation

--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -19,6 +19,9 @@ maven.remote.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
+## fork junit - makes classloading more reliable.
+maven.junit.fork=true
+
 # Checkstyle file
 maven.checkstyle.properties=${basedir}/checkstyle.xml
 
